tests/NormalTests/paczka2/big_fuzzy/61166691.err
Error in line 16: fhl A434 22,6
Error in line 29: ZQtl54NPwAn A434 95,4
Error in line 28: K8VryAYR S63 76,1
Error in line 20: S63 A434 42,5
Error in line 45: S63 S314 153,0
Error in line 30: kF1PcKFKK S314 30,8
Error in line 62: ZQtl54NPwAn S63 25,8
Error in line 63: ZQtl54NPwAn A434 52,3
Error in line 79: 66rfV10XbP A751 -5,9
Error in line 58: K8VryAYR S314 77,4
Error in line 87: K8VryAYR A751 51,9
Error in line 52: X9Hx17Kqj A751 28,5
Error in line 114: kF1PcKFKK A751 89,3
Error in line 120: 66rfV10XbP A751 19,8
Error in line 128: K8VryAYR A751 26,3
Error in line 123: fhl S314 98,3
Error in line 143: ZQtl54NPwAn S314 196,5
Error in line 133: fhl A751 10,5
Error in line 146: fhl S63 10,1
Error in line 150: 66rfV10XbP S63 49,9
Error in line 164: K8VryAYR A434 52,3
Error in line 171: fhl S63 9,8
Error in line 168: K8VryAYR A751 30,5
Error in line 178: X9Hx17Kqj S314 82,5
Error in line 189: X9Hx17Kqj S63 4,7
Error in line 191: kF1PcKFKK S314 91,8
Error in line 204: ZQtl54NPwAn S63 36,8
Error in line 193: X9Hx17Kqj A751 12,3
Error in line 215: fhl S63 64,8
Error in line 226: ZQtl54NPwAn S314 85,6
Error in line 223: 66rfV10XbP S63 313,9
Error in line 239: 66rfV10XbP S314 9,1
Error in line 243: 66rfV10XbP A434 32,1
